# jira_lazy

./: LICENSE  README.md  pyproject.toml
src/jira_lazy/: __init__.py  collection_endpoint.py  session.py
